--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,13 +3,10 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="icon" href="/static/favicon.png" type="image/png">
    <title>JobDash - Track Your Job Applications Seamlessly</title>
-   <link rel="icon" href="/static/logo2.jpeg" type="image/jpeg">
-
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
    <style>
        /* Enhanced Minimalist Design */
        body {
@@ -98,7 +95,7 @@
 
    <!-- Header -->
    <header class="flex justify-between items-center p-6 bg-white shadow-md">
-      <div class="text-3xl font-extrabold text-indigo-600">JobDash.</div>
+      <div class="text-3xl font-extrabold text-indigo-600">JobDash_</div>
       <nav class="flex space-x-6">
          <a href="#features" class="nav-link text-gray-800 hover:text-indigo-600 transition">Features</a>
          <a href="#testimonials" class="nav-link text-gray-800 hover:text-indigo-600 transition">Testimonials</a>
@@ -165,7 +162,6 @@
 
    <!-- Contact Section -->
    <section id="contact" class="py-20 bg-white">
-      <h2 class="section-heading text-center fade-in-up">Get in Touch</h2>
       <p class="section-subheading text-center fade-in-up">Have questions or need support? Reach out to us and we’ll be happy to assist you.</p>
       <div class="flex justify-center">
          <a href="mailto:jobdash.care24x7@gmail.com" class="px-6 py-3 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition text-lg">Contact Us</a>
@@ -174,13 +170,13 @@
 
     <!-- Footer -->
     <footer class="p-6 bg-gray-800 text-white text-center">
-        <p class="mb-4">&copy; 2024 JobDash. All rights reserved.</p>
-        <div class="flex justify-center space-x-6">
-        <a href="#" class="text-gray-400 hover:text-white">Twitter</a>
-        <a href="#" class="text-gray-400 hover:text-white">Facebook</a>
-        <a href="#" class="text-gray-400 hover:text-white">LinkedIn</a>
-        </div>
-    </footer>
+      <p class="mb-4">&copy; 2024 JobDash_ All rights reserved.</p>
+      <div class="flex justify-center space-x-6">
+         <a href="tel:+9198088126763" class="text-gray-400 hover:text-white " target="_blank">Contact</a>
+         <a href="https://www.linkedin.com/in/gahan-pradhan-7b9788252/" target="_blank" class="text-gray-400 hover:text-white">Linkedin</a>
+         <a href="mailto:jobdash.care24x7@gmail.com" class="text-gray-400 hover:text-white" target="_blank">Support</a>
+      </div>
+   </footer>  
 
 </body>
 </html>
